[gd_scene load_steps=19 format=3 uid="uid://dsbia1rghqca1"]

[ext_resource type="Script" path="res://Script/animal_or_toy.gd" id="1_uq4wu"]
[ext_resource type="Texture2D" uid="uid://bs5tr37ncn4gt" path="res://Asset/Image/Laser-Beam-PNG-HD-Image1.png" id="5_h26ke"]
[ext_resource type="Texture2D" uid="uid://c3cgcntk8hkqr" path="res://Asset/Image/Tiles/boomba.png" id="9_ykcvt"]
[ext_resource type="AudioStream" uid="uid://cglucvb78plya" path="res://Asset/Sounds/Effects/addons/kenney impact sounds/impact_soft_heavy_004.ogg" id="10_peo6t"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_agrun"]
friction = 0.5

[sub_resource type="AtlasTexture" id="AtlasTexture_tfpr3"]
atlas = ExtResource("9_ykcvt")
region = Rect2(0, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_jo7ad"]
atlas = ExtResource("9_ykcvt")
region = Rect2(512, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_sw7ff"]
atlas = ExtResource("9_ykcvt")
region = Rect2(1024, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_n1gig"]
atlas = ExtResource("9_ykcvt")
region = Rect2(1536, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_oof82"]
atlas = ExtResource("9_ykcvt")
region = Rect2(0, 512, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_2dyuj"]
atlas = ExtResource("9_ykcvt")
region = Rect2(512, 512, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_2qukl"]
atlas = ExtResource("9_ykcvt")
region = Rect2(1024, 512, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_7uahr"]
atlas = ExtResource("9_ykcvt")
region = Rect2(1536, 512, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_31vwc"]
atlas = ExtResource("9_ykcvt")
region = Rect2(0, 1024, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_gm2eq"]
atlas = ExtResource("9_ykcvt")
region = Rect2(512, 1024, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_qma17"]
atlas = ExtResource("9_ykcvt")
region = Rect2(1024, 1024, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_vayyq"]
atlas = ExtResource("9_ykcvt")
region = Rect2(1536, 1024, 512, 512)

[sub_resource type="SpriteFrames" id="SpriteFrames_c4t7g"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tfpr3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jo7ad")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sw7ff")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n1gig")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oof82")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2dyuj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2qukl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7uahr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_31vwc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gm2eq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qma17")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vayyq")
}],
"loop": true,
"name": &"kabum",
"speed": 15.0
}]

[node name="AnimalOrToy" type="RigidBody2D"]
visibility_layer = 3
physics_material_override = SubResource("PhysicsMaterial_agrun")
center_of_mass_mode = 1
contact_monitor = true
max_contacts_reported = 10
script = ExtResource("1_uq4wu")

[node name="merge_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_peo6t")
volume_db = 24.0
bus = &"SFX"

[node name="kabum" type="AnimatedSprite2D" parent="."]
visible = false
z_index = 1
sprite_frames = SubResource("SpriteFrames_c4t7g")
animation = &"kabum"
frame_progress = 0.0275997

[node name="Laser" type="Sprite2D" parent="."]
rotation = 1.5708
texture = ExtResource("5_h26ke")
offset = Vector2(170, 0)

[connection signal="body_entered" from="." to="." method="_on_Ball_collided"]
[connection signal="body_exited" from="." to="." method="_on_collision_end"]
